2003-04-08  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/image_rotate.c (flimage_rotate): enable the rotation of
	grayscale images by 90degree multiples and more generally prevent
	other unsupported image types from crashing xforms.

	* lib/flresource.c (fl_initialize): clean-up properly if we fail to
	create input contexts or methods.